[fix] project name text-align start

--- a/src/sections/Work/work.css
+++ b/src/sections/Work/work.css
@@ -6,6 +6,7 @@
   padding: 25px;
   border-radius: 7px;
   color: white;
+  text-align: start !important;
 }
 
 .projects {
